--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,14 @@
 {
-    "name": "caffeinated/modules",
-    "description": "Laravel 5.x Modules",
-    "keywords": ["modules", "laravel", "caffeinated"],
+    "name": "eafshary/modules",
+    "description": "Laravel HMVC",
+    "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": "Shea Lewis",
-            "email": "shea.lewis89@gmail.com"
+            "name": "ehsan afshary",
+            "email": "eafsharynejad@gmail.com"
         }
     ],
-    "require": {
-        "php": ">=5.6.4",
-        "illuminate/support": "5.4.*"
-    },
-    "autoload": {
-        "psr-4": {
-            "Caffeinated\\Modules\\": "src/"
-        }
-    },
-    "suggest": {
-        "wikimedia/composer-merge-plugin": "Allows the ability to create and merge composer.json files for your individual modules for module-specific dependency management."
-    }
+    "minimum-stability": "dev",
+    "require": {}
 }
